--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,8 +18,8 @@ spring:
       client:
         registration:
           google:
-            client-id: a
-            client-secret: a
+            client-id:
+            client-secret:
             scope:
               - email
               - profile
@@ -28,3 +28,8 @@ spring:
 
 mybatis:
   mapper-locations: mybatis/mapper/**/*.xml
+
+
+logging:
+  level:
+    root: debug
